--- a/src/Food.Web/Food.Web.csproj
+++ b/src/Food.Web/Food.Web.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features/Restaurants/GetRestaurants/" />
+  </ItemGroup>
+
 </Project>
